<resources>
    <string name="app_name">Fitness Journal</string>
    <string name="navigation_drawer_open">Check out another section</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Fitness Journal</string>
    <string name="nav_header_subtitle">by MakDid7 on GitHub ☺</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_journal">My Journal</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_notes">My Notes</string>
    <string name="_400m">Running (400m)</string>
    <string name="kick_ups">Kick-ups</string>
    <string name="hit_ups">Hit-ups</string>
    <string name="_400m_desc">Four hundred meter running</string>
    <string name="hit_ups_desc">Badminton hit-ups</string>
    <string name="kick_ups_desc">Soccer kick-ups</string>
    <string name="notes_hint">Write down anything you might need in the future.\nYour notes are auto-saved!</string>
    <string name="_800m">Running (800m)</string>
    <string name="_800m_desc">Eight hundred meter running</string>
    <string name="skip_rope">Skip (2min)</string>
    <string name="high_jump">High jump</string>
    <string name="notes_text_size_hint">Text size:</string>
    <string name="high_jump_desc">High jumping</string>
    <string name="skip_rope_desc">Skip rope</string>
    <string name="push_ups_desc">Push ups</string>
    <string name="long_jump_desc">Long jump</string>
    <string name="javelin_throw_desc">Javelin throwing</string>
    <string name="shot_put_desc">Shot put</string>
    <string name="long_jump">Long jump</string>
    <string name="javelin_throw">Javelin throw</string>
    <string name="shot_put">Shot put</string>
    <string name="push_ups">Push-ups</string>
    <string name="search_hint">seek &amp; you shall find~</string>
    <string name="custom_option_btn_text">Or choose your own!</string>
    <string name="custom_option_desc">Choose a custom discipline to track</string>

    <string name="tips_motivation_title">How do I stay motivated?</string>
            <string name="tips_motivation_details">◉ Don\'t burn yourself out!\n\n      If a type of exercise isn\'t for you, it\'s worth considering another one;\n\n    Find exercises you enjoy performing (but make sure you\'re making progress!)\n\n\n◉ Hence, try a wide range of exercises — this can include anything from body-building to athletics to yoga and meditation;\n\n        For example, you might start with yoga to get into the rhythm of consistent training, and then move on to other areas.\n\n\n◉ Group exercise\n\n        In almost all cases, partaking in exercise with friends or family members helps overcome a lack of motivation.\n\nInvite anyone you\'re comfortable with to join you on your journey!</string>

    <string name="tips_getting_started_title">Where do I start?</string>
    <string name="tips_getting_started_details">You can start with HIIT : (H)igh-(I)ntensity (I)nterval (T)raining.\n\nHIIT focuses on short, high-intensity exercise repetitions.\n\nIt\'s often recommended to beginners, since each exercise interval only last 7 minutes and keeps you engaged…\n\n…Hence, you may find that as soon as you consider quitting one… it\'s coming to an end, to be replaced with some rest!\n\nGoogle some HIIT sequences and perform them :)</string>

    <!--    https://www.webmd.com/fitness-exercise/ss/slideshow-best-foods-fitness-->
    <!--    https://www.cookedup.com.au/what-is-the-best-diet-for-a-gym-beginner/-->
    <string name="tips_diet_title">What should I eat?</string>
    <string name="tips_diet_details">You should eat prior to workout — or you\'ll run out of fuel mid-race :)\n\nIn a hurry? Grab a banana or an apple 5–10 min before your workout — fruit is easily and quickly digested, and is full of nutrients and energy.\n\nTry planning meals with high protein and fats but low carbohydrates — foods such as lean meats, fish, eggs, tofu, chicken, and non-starchy vegetables.\n\nThis will help to: (1) maintain muscle mass; (2) burn fat; (3) prevent muscle loss and fatigue.</string>

    <string name="tips_caution_title">What should I be cautious about?</string>
    <string name="tips_caution_details">Consider these points during exercise:\n\n◉ Overworking your body → do not push your body past its limits, in terms of how hard and often you exercise.\n\nOtherwise, you\'re risking injuring yourself as your body isn\'t used to the movements and load yet.\n\nSo… be flexible about your goals and go at your own pace.\n\nRemember: it\'s crucial to recognize the line between pushing yourself and overdoing it.\n\n\n◉ Stretch! After completing your workout routine, make sure to apply stretching exercises to all affected muscles.\n\nStretching reduces your risk of injury.</string>

    <string name="search_title">Search</string>
    <string name="skip_rope_tracking_prompt_start">You just jump-roped:</string>
    <string name="skip_rope_tracking_prompt_end">times in 2 minutes!</string>
    <string name="hit_ups_tracking_prompt_start">You just bounced a shuttle:</string>
    <string name="hit_ups_tracking_prompt_end">times in a row!</string>
    <string name="kick_ups_tracking_prompt_start">You just kicked a football up:</string>
    <string name="kick_ups_tracking_prompt_end">times in a row!</string>
    <string name="_400m_tracking_prompt_start">You just ran 400m in:</string>
    <string name="_400m_tracking_prompt_end">seconds!</string>
    <string name="_800m_tracking_prompt_start">You just ran 800m in:</string>
    <string name="_800m_tracking_prompt_end">seconds!</string>
    <string name="long_jump_tracking_prompt_start">You just jumped across:</string>
    <string name="long_jump_tracking_prompt_end">centimeters!</string>
    <string name="javelin_throw_tracking_prompt_start">You just threw a javelin across:</string>
    <string name="javelin_throw_tracking_prompt_end">centimeters!</string>
    <string name="shot_put_tracking_prompt_start">You just threw a shot put across:</string>
    <string name="shot_put_tracking_prompt_end">centimeters!</string>
    <string name="high_jump_tracking_prompt_start">You just jumped:</string>
    <string name="high_jump_tracking_prompt_end">centimeters high!</string>
    <string name="push_ups_tracking_prompt_start">You just did:</string>
    <string name="push_ups_tracking_prompt_end">push-ups in a row!</string>
    <string name="close_tracking_button_desc">Go back to the journal menu</string>
    <!--    <string name="skip_rope_key">SKIP_ROPE</string>-->
    <!--    <string name="hit_ups_key">HIT_UPS</string>-->
    <!--    <string name="kick_ups_key">KICK_UPS</string>-->
    <!--    <string name="_400m_key">RUN_400M</string>-->
    <!--    <string name="_800m_key">RUN_800M</string>-->
    <!--    <string name="long_jump_key">LONG_JUMP</string>-->
    <!--    <string name="javelin_throw_key">JAVELIN_THROW</string>-->
    <!--    <string name="shot_put_key">SHOT_PUT</string>-->
    <!--    <string name="high_jump_key">HIGH_JUMP</string>-->
    <!--    <string name="push_ups_key">PUSH_UPS</string>-->
    <!--    <string name="custom_option_key">CUSTOM_OPTION</string>-->
    <string name="custom_tracking_upload_image_desc">Upload your own image for this activity!</string>
    <!--    <string name="upload_image">Choose your own image to represent this activity!</string>-->
    <string name="custom_tracking_upload_image">Choose your own icon!</string>
    <string name="custom_tracking_title">Set up your own activity</string>
    <!--    <string name="custom_tracking_measurement_unit_prompt">In what units will you measure it? (for example: cm)</string>-->
    <string name="custom_tracking_measurement_unit_prompt">Example: cm</string>
    <!--    <string name="custom_tracking_measurement_name_prompt">What will you name this activity? (for example: Running (800m))</string>-->
    <string name="custom_tracking_measurement_name_prompt">Example: High jump</string>
    <string name="custom_tracking_name_hint">Activity name</string>
    <string name="custom_tracking_unit_hint">Unit</string>
    <string name="custom_tracking_save_prompt">Save</string>
    <string name="custom_tracking_save_desc">Save your custom activity.</string>
    <string name="close_custom_tracking">Return</string>
    <string name="close_tracking">Return</string>
    <string name="image_chooser_title">Choose an icon for your activity</string>
    <string name="tracking_number_hint" translatable="false">#</string>
    <string name="img_btn_tracking_progress_desc">View your progress</string>
    <string name="tracking_progress_dialog_title">Let\'s crunch your numbers…</string>
    <string name="open_progress">My stats</string>
    <string name="graph_title">Your progress (press a data point to inspect it)</string>
    <string name="datapoint_dialog_title">Inspect data point</string>
    <string name="datapoint_dialog_negative">Delete</string>
    <string name="new_value">New value</string>
    <string name="submit">Submit</string>
    <string name="skip_rope_unit">skips</string>
    <string name="hit_ups_unit">hit-ups</string>
    <string name="kick_ups_unit">kick-ups</string>
    <string name="_400m_unit">sec</string>
    <string name="_800m_unit">sec</string>
    <string name="long_jump_unit">cm</string>
    <string name="javelin_throw_unit">cm</string>
    <string name="shot_put_unit">cm</string>
    <string name="high_jump_unit">cm</string>
    <string name="push_ups_unit">push-ups</string>
    <string name="got_it">Got it</string>
    <string name="clear_data">Clear data</string>
    <string name="remove_it">Remove it!</string>
    <string name="cancel">Cancel</string>
    <string name="graph_horizontal_axis_title">Timestamp</string>
    <string name="delete_all_discipline_data_confirm_title">Really delete ALL data for ***?</string>
    <string name="delete_data_point_a_confirm_title">Really delete ***?</string>
    <string name="first_submission_toast_message">Your submission was recorded, but we can only plot 2 or more data points.</string>
    <string name="tutorial_dialog_title">Welcome!</string>
    <string name="tutorial_start_dialog_message">Hi! This app aims to help fitness beginners make their first steps.</string>
    <string name="tutorial_journal_dialog_message">You\'re currently in the Journal tab, where you can select a sport and record your progress in it.</string>
    <string name="tutorial_start_dialog_button_text">Continue!</string>
    <string name="tutorial_end_dialog_message">Here, you can access the other tabs. Check them out!\n\nThis is it for the tutorial. Have fun!</string>
    <string name="ok">OK</string>
    <string name="tips_subtitle">A brief booklet with things to keep in mind on your journey</string>
    <string name="yes">Yes</string>
    <string name="custom_option_key">Custom option</string>
</resources>