<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.tips.TipsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:animateLayoutChanges="true"
        android:id="@+id/tipsMainView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/tvTipsSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:padding="40dp"
            android:textAlignment="center"
            android:textSize="19sp"
            android:text="@string/tips_subtitle"
            android:textColor="@color/light_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStarting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTipsSubtitle"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/ll_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_start_title"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/tips_getting_started_title"
                    android:textColor="@color/watermelon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start_details"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/tips_getting_started_details"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvStarting"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/cvMotivation"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_motiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_motiv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_motivation_title"
                    android:textColor="@color/watermelon"
                    android:fontFamily="@font/montserrat_medium"
                    android:textStyle="bold"
                    style="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:id="@+id/tv_motiv_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_motivation_details"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/white"
                    style="@android:style/TextAppearance.DeviceDefault.Medium" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            android:id="@+id/cvDiet"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cvMotivation"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/ll_diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_diet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_diet_title"
                    android:textColor="@color/watermelon"
                    android:fontFamily="@font/montserrat_medium"
                    android:textStyle="bold"
                    style="@android:style/TextAppearance.DeviceDefault.Large" />

                <TextView
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:id="@+id/tv_diet_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_diet_details"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/white"
                    style="@android:style/TextAppearance.DeviceDefault.Medium" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCaution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/dark_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvDiet"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/ll_caution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_caution_title"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/tips_caution_title"
                    android:textColor="@color/watermelon"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_caution_details"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/tips_caution_details"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>