<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:id="@+id/customTrackingMainView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/clCloseCustomTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/tvCloseCustomTracking"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:labelFor="@+id/clCloseCustomTracking"
                android:text="@string/close_custom_tracking"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivCloseCustomTracking"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivCloseCustomTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/close_tracking_button_desc"
                app:layout_constraintBottom_toBottomOf="@+id/tvCloseCustomTracking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCloseCustomTracking"
                app:srcCompat="@drawable/ic_return" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ripple"
            android:backgroundTint="#636363"
            android:elevation="5dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvCustomTrackingSave"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:labelFor="@+id/clSave"
                android:text="@string/custom_tracking_save_prompt"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivCustomTrackingSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_marginEnd="5dp"
                android:id="@+id/ivCustomTrackingSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close_tracking_button_desc"
                app:layout_constraintBottom_toBottomOf="@+id/tvCustomTrackingSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCustomTrackingSave"
                app:srcCompat="@drawable/ic_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCustomTrackingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:labelFor="@+id/customTrackingMainView"
            android:paddingTop="65dp"
            android:paddingBottom="75dp"
            android:text="@string/custom_tracking_title"
            android:textAlignment="center"
            android:textColor="@color/light_white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clCloseCustomTracking" />

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/clCustomTrackingUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clCustomTrackingUnit">

            <ImageButton
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:id="@+id/imgBtnUploadImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ripple"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/custom_tracking_upload_image_desc"
                android:elevation="5dp"
                android:src="@drawable/ic_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:paddingBottom="100dp"
                android:id="@+id/tvCustomTrackingUploadImage"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:labelFor="@id/imgBtnUploadImage"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:text="@string/custom_tracking_upload_image"
                android:textAlignment="center"
                android:textColor="@color/light_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBtnUploadImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCustomTrackingUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clCustomTrackingName">

            <EditText
                android:elevation="5dp"
                android:hint="@string/custom_tracking_unit_hint"
                android:id="@+id/etCustomTrackingUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/coral"
                android:fontFamily="@font/montserrat_medium"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="5"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_blue"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvCustomTrackingUnit"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:labelFor="@+id/etCustomTrackingUnit"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="15dp"
                android:text="@string/custom_tracking_measurement_unit_prompt"
                android:textAlignment="center"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCustomTrackingUnit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/clCustomTrackingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomTrackingTitle">

            <EditText
                android:id="@+id/etCustomTrackingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/coral"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/custom_tracking_name_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_blue"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCustomTrackingName"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:labelFor="@+id/etCustomTrackingUnit"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:text="@string/custom_tracking_measurement_name_prompt"
                android:textAlignment="center"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCustomTrackingName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>